// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <PaginationControls /> functions first page Component <PaginationControls /> renders correctly 1`] = `
<div>
  <div
    className="pagination__control"
    onClick={[Function]}
  >
    ‹ Left
  </div>
  <div
    className="pagination__button"
    onClick={[Function]}
  >
    1
  </div>
  <div
    className="pagination__button current_page"
  >
    2
  </div>
  <div
    className="pagination__button"
    onClick={[Function]}
  >
    3
  </div>
  <div
    className="pagination__button"
    onClick={[Function]}
  >
    4
  </div>
  <div
    className="pagination__button"
    onClick={[Function]}
  >
    5
  </div>
  <div
    className="pagination__control"
    onClick={[Function]}
  >
    Right ›
  </div>
</div>
`;

exports[`Component <PaginationControls /> functions lastPage Component <PaginationControls /> renders correctly 1`] = `
<div>
  <div
    className="pagination__control"
    onClick={[Function]}
  >
    ‹ Left
  </div>
  <div
    className="pagination__button"
    onClick={[Function]}
  >
    1
  </div>
  <div
    className="pagination__button"
    onClick={[Function]}
  >
    2
  </div>
  <div
    className="pagination__button"
    onClick={[Function]}
  >
    3
  </div>
  <div
    className="pagination__button"
    onClick={[Function]}
  >
    4
  </div>
  <div
    className="pagination__button current_page"
  >
    5
  </div>
  <div
    className="pagination__control disabled"
  >
    Right ›
  </div>
</div>
`;

exports[`Component <PaginationControls /> functions lastPage Component <PaginationControls /> renders correctly 2`] = `
<div>
  <div
    className="pagination__control"
    onClick={[Function]}
  >
    ‹ Left
  </div>
  <div
    className="pagination__button"
    onClick={[Function]}
  >
    1
  </div>
  <div
    className="pagination__button current_page"
  >
    2
  </div>
  <div
    className="pagination__button"
    onClick={[Function]}
  >
    3
  </div>
  <div
    className="pagination__button"
    onClick={[Function]}
  >
    4
  </div>
  <div
    className="pagination__button"
    onClick={[Function]}
  >
    5
  </div>
  <div
    className="pagination__control"
    onClick={[Function]}
  >
    Right ›
  </div>
</div>
`;

exports[`Component <PaginationControls /> render Left Component <PaginationControls /> renders correctly 1`] = `
<div>
  <div
    className="pagination__control"
    onClick={[Function]}
  >
    ‹ Left
  </div>
  <div
    className="pagination__button"
    onClick={[Function]}
  >
    1
  </div>
  <div
    className="pagination__button current_page"
  >
    2
  </div>
  <div
    className="pagination__button"
    onClick={[Function]}
  >
    3
  </div>
  <div
    className="pagination__button"
    onClick={[Function]}
  >
    4
  </div>
  <div
    className="pagination__button"
    onClick={[Function]}
  >
    5
  </div>
  <div
    className="pagination__control"
    onClick={[Function]}
  >
    Right ›
  </div>
</div>
`;

exports[`Component <PaginationControls /> renders correctly 1`] = `
<div>
  <div
    className="pagination__control disabled"
  >
    ‹ Left
  </div>
  <div
    className="pagination__button current_page"
  >
    1
  </div>
  <div
    className="pagination__button"
    onClick={[Function]}
  >
    2
  </div>
  <div
    className="pagination__button"
    onClick={[Function]}
  >
    3
  </div>
  <div
    className="pagination__button"
    onClick={[Function]}
  >
    4
  </div>
  <div
    className="pagination__button"
    onClick={[Function]}
  >
    5
  </div>
  <div
    className="pagination__control"
    onClick={[Function]}
  >
    Right ›
  </div>
</div>
`;
